fix(drawer): align shadow colors with design spec (#463)
RISDEV-11171

--- a/src/tailwind/components-extra/drawer.css
+++ b/src/tailwind/components-extra/drawer.css
@@ -14,14 +14,14 @@ supported by Tailwind. */
     @container scroll-state(scrollable: top) {
       .drawer-header {
         @apply border-b border-gray-400;
-        box-shadow: 0 0 0.5rem 0 rgb(from var(--color-gray-900) r g b / 0.3);
+        box-shadow: 0 0 0.5rem 0 rgb(from var(--color-gray-1000) r g b / 0.15);
       }
     }
 
     @container scroll-state(scrollable: bottom) {
       .drawer-footer {
         @apply border-t border-gray-400;
-        box-shadow: 0 0 0.5rem 0 rgb(from var(--color-gray-900) r g b / 0.3);
+        box-shadow: 0 0 0.5rem 0 rgb(from var(--color-gray-1000) r g b / 0.15);
       }
     }
   }
